# BraggPeakSampler

./: .gitignore  README.md
analysis/: HistTraces.cpp  analysis.cpp  braggfit.py  braggfiterror.cpp  config.json  heterosweep.py  modulation.py  physicslisttest.py  testbragg.py
analysis/include/: Calibration.h  Detector.h  DetectorProperties.h  EnergyCh.h  Particle.h  Plotter.h  TraceProperties.h
analysis/src/: Detector.cpp  Particle.cpp  Plotter.cpp  TraceProperties.cpp
beamtime/: Calibration.h  Particle.cpp  Particle.h  Plotter.cpp  Plotter.h  TraceProperties.cpp  TraceProperties.h  all_trace_analysis.cpp  braggerror.cpp  braggfit.py  curve_analysis.py  draw_hist.cpp  edep_coincidence.cpp  edep_old.cpp  single_trace_analysis.cpp  time_coincidence.cpp
data/modulation/: 0mu_0mm.root  100mu_100mm.root  100mu_150mm.root  100mu_200mm.root  100mu_50mm.root  200mu_100mm.root  200mu_150mm.root  200mu_200mm.root  (+25 more)
energy_calibration/: background_ch0_180s.root  calib.py  linearity.py  muon_20C_312973s.root  na22-511kev_test.root  na22_cfd_1155s_20C.root  na22_ch0_64104s.root  na22_ch11_10_cfd_1461s_20C.root  na22_ch12_cfd_681s_20C.root  na22_ch13_14_cfd_2251s_20C.root  na22_ch3_2_cfd_433s_20C.root  na22_ch5_4_cfd_1211s_20C.root  na22_ch9_8_cfd_617s_20C.root  na22_ch_7_6_cfd_365s_20C.root  substract_histograms.cpp  we_ch0_sep9_257664s.root
lightyield/: calclightyield.py  fitlightyield.py  lightyield.py  test
linearity/: c_sipm_4.root  expofit.py  o_sipm_2.root  o_sipm_4.root  o_sipm_5.root  u_sipm_1.root  u_sipm_4.root
other/: 03-Fricke-20Gy_7514292SP_7514292SP_0030.Raw8  03-Fricke-20Gy_7514292SP_7514292SP_0030.txt  Pmod.py  approx.py  apr29-week-histo.root  calcStopping.py  convertRaw8.py  may8-co60-0p.root  output_ascii.txt  stoppCompare.py
simulation/detector/: CMakeLists.txt  braggsampler.cc  heterosweep.sh  heterotarget_run.sh  homotarget_run.sh  modulation.sh  notarget_run.sh  run_p.mac  vis.mac  vis.sh  vis_wrl.mac
simulation/detector/include/: ActionInitialization.hh  DetectorConstruction.hh  DetectorMessenger.hh  DetectorParameterisationColour.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SiPMSD.hh  TrackerHit.hh  TrackerSD.hh
simulation/detector/legacy/: H  data_analysis_muon.c  merge_muon.sh  pstar_stopping_power_water_protons.txt
simulation/detector/src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  HeteroParametrisation.cc  PrimaryGeneratorAction.cc  RunAction.cc  SiPMSD.cc  TrackerHit.cc  TrackerSD.cc
transmission/: transmission.py
wrapping/: pe_peaks.py  pwo_c1_na22_window_360s.root  pwo_c1_window_300s.root  pwo_c1_window_360s.root  pwo_c1_window_sr90_200s.root  subtractHisto.py
(+2886 files in other folders)
